CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "LearnOpenGL install path" FORCE)
PROJECT(LearnOpenGL VERSION 0.1.0)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "Enable/disable GLFW doc building" FORCE)
ADD_SUBDIRECTORY("lib/glfw")

ADD_SUBDIRECTORY("lib/glad")

INCLUDE_DIRECTORIES("${GLFW_SOURCE_DIR}/include"
                    "${GLAD_INCLUDE_DIR}")
ADD_EXECUTABLE(LearnOpenGL "src/main.cpp")
TARGET_LINK_LIBRARIES(LearnOpenGL glfw glad)
