CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(glad VERSION 2.0)

SET(GLAD_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "Glad project root directory" FORCE)
SET(GLAD_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}" CACHE PATH "Glad project built binary directory" FORCE)
SET(GLAD_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE PATH "Glad project includes directory" FORCE)

INCLUDE_DIRECTORIES("${GLAD_INCLUDE_DIR}")
ADD_LIBRARY(glad STATIC "src/glad.c")
